# bastion-like

./: Cargo.toml  README.md
assets/models/golem/: license.txt  scene.gltf
src/: animations_handler.rs  chess_pieces.rs  creatures.rs  direction.rs  fox.rs  main.rs  map.rs  mob.rs  physics.rs  skeleton.rs  skelly.rs
src/animations_handler/: mod.rs
src/camera/: mod.rs
src/creatures/: chess_pieces.rs  fox.rs  mob.rs  mod.rs  skelly.rs
src/inputs/: keys_mapping.rs  mod.rs
src/map/: chess_board.rs  mod.rs
