[package]
name = "bastion-like"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.1"
bevy = "0.7.0"
bevy_mod_picking = "0.7.0"
bevy_rapier3d = { version = "0.14.1", features = [ "simd-stable", "debug-render" ] }
nalgebra = "0.31.0"

# Enable only a small amount of optimization in debug mode
# See: https://bevy-cheatbook.github.io/pitfalls/performance.html
[profile.dev]
opt-level = 1